--- a/styles.less
+++ b/styles.less
@@ -1,23 +1,30 @@
+@import "basics.less";
+
 * {
   margin: 0;
   padding: 0;
+  line-height: 120%;
   /* -webkit-box-sizing: border-box;
   box-sizing: border-box; */
 }
 
 h1,
 h2 {
-  font-size: 250%;
+  font-size: 150%;
   font-weight: 900;
-  padding-top: 0px;
+  padding-top: @dot5;
 }
 
 h3 {
-  font-size: 200%;
+  font-size: 125%;
   font-weight: 900;
-  padding-top: 0px;
+  padding-top: @dot25;
 }
-
+h4 {
+  font-size: 100%;
+  font-weight: 900;
+  padding-top: @dot2;
+}
 .profileText p {
   /* font-size: 120%; */
   font-weight: 500;
@@ -33,109 +40,46 @@ h3 {
 body {
   background-color: #eaf4f4;
   font-family: "Hepta Slab", cursive;
-  font-size: 11px;
+  font-size: 10px;
   display: flex;
   align-items: center;
-  margin-right: 2rem;
+  margin-right: @1;
+  /* line-height: 120%; */
 }
 
 a {
   text-decoration: underline;
 }
-.green {
-  color: rgb(64, 145, 108) !important;
-}
-.green2 {
-  color: rgb(82, 183, 136) !important;
-}
-.green3 {
-  color: rgb(116, 198, 157) !important;
-}
-.greenLight {
-  color: rgb(55, 255, 145) !important;
-}
-
-.bgWhite {
-  background-color: #fff !important;
-}
-.bgGreen {
-  background-color: rgb(64, 145, 108) !important;
-}
-.bgGreen2 {
-  background-color: rgb(82, 183, 136) !important;
-}
-.bgGreen3 {
-  background-color: rgb(116, 198, 157) !important;
-}
-
-.bgGreen4 {
-  background-color: rgb(149, 213, 178) !important;
-}
-
-.bgGreen5 {
-  background-color: rgb(183, 228, 199) !important;
-}
-.bgGreen6 {
-  background-color: rgb(216, 243, 220) !important;
-}
-.white {
-  color: #fff !important;
-}
-.blueLight {
-  color: rgba(0, 129, 167, 0.7);
-}
-.bgBlue {
-  background-color: #2579ad !important;
-}
-.bgBlue2 {
-  background-color: #99c1de !important;
-}
-.bgBlue3 {
-  background-color: #ade8f4 !important;
-}
-.bgBlue4 {
-  background-color: #caf0f8 !important;
-}
-.bgBlue5 {
-  background-color: #eefcff !important;
-}
-.blue {
-  color: #2579ad !important;
-}
-.blue2 {
-  color: #99c1de !important;
-}
-.blue3 {
-  color: #ade8f4 !important;
-}
 
 .center {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+.alignSelfCenter {
+  align-self: center !important;
 }
 
-.border {
-  border: 1px solid;
+.flexStart {
+  align-items: flex-start !important;
+}
+.textCenter {
+  text-align: center;
 }
 
-.pl10px {
-  padding-left: 10px;
-}
-.p5px10px {
-  padding: 5px 10px;
-}
-
-@media (min-width: 380px) {
+@media (min-width: 370px) {
   .container {
     position: relative;
     max-width: 100%;
     /* display: -ms-grid; */
     display: grid;
   }
+  .body {
+    margin: 0;
+  }
 }
 
 .grid1vs2 {
-  grid-template-columns: 30% auto;
+  grid-template-columns: 30% 1fr;
 }
 
 .grid1vs1 {
@@ -160,8 +104,8 @@ a {
   /* padding: 10%; */
   color: #bee9e8;
   font-weight: 200;
-  padding: 0 0 5% 0%;
-  margin: 0 5%;
+  padding: 0 0 @dot1 0%;
+  // margin: 0 5%;
   text-align: center;
   /* padding-bottom: 50px; */
 }
@@ -187,10 +131,11 @@ p,
 span,
 tr,
 th {
+  // &:extend(.p3_10);
+  .p(@dot25, 0);
   font-weight: 500;
 }
 p {
-  margin: 5px 10px;
   text-align: justify;
 }
 .leftSide .block table tr {
@@ -223,22 +168,26 @@ table .right {
   position: relative;
   /* font-size: 150%; */
   color: #0081a7;
-  margin: 2%;
+  width: 100% !important;
+  .pl(@1);
 }
 .container .rightSide .block .ending {
-  margin: 2% 50% 1% 0;
-  border-bottom: 2px solid rgba(0, 129, 167, 0.2);
+  // margin: 2% 50% 1% 0;
+  margin: @dot2 50% @dot1 0;
+  border-bottom: @dot2 solid rgba(0, 129, 167, 0.2);
 }
 .aboutMe {
   text-align: justify;
-  padding-left: 5px;
-  /* width: 70%; */
+  // padding-left: 5px;
+  .pl(@1)/* width: 70%; */;
 }
 .myCardWrapper {
+  // &:extend(.p_dot25_dot5);
   position: relative;
   display: flex;
+
   flex-flow: row wrap;
-  align-items: stretch;
+  // align-items: stretch;
 }
 
 .myCard {
@@ -246,27 +195,24 @@ table .right {
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  justify-content: flex-start;
+  // justify-content: flex-start;
+  // justify-content: center;
 
-  padding: 0.5rem 1rem;
-  max-width: 500px;
+  padding: @dot25 @dot25;
+  // .p10px;
+  // .py-2;
 }
 .myCard .meta {
   position: relative;
   display: flex;
-  width: 80px;
+
   flex-direction: column;
-  align-self: center;
+  /* align-self: center; */
   align-items: center;
   align-content: center;
   justify-content: center;
-
-  /* background-color: rgb(24, 209, 163); */
-  background-color: #fff;
-  /* border-radius: 10px; */
-
-  /* z-index: 0; */
 }
+
 .myCard .meta .tag {
   position: relative;
   width: 100%;
@@ -276,11 +222,8 @@ table .right {
   color: #fff;
 
   text-align: center;
-  /* width: 100%; */
 }
-/* .green {
-  background-color: green;
-} */
+
 .myCard .meta .photo {
   display: flex;
   width: 50px;
@@ -297,17 +240,19 @@ table .right {
 }
 .myCard .details {
   z-index: 1;
-  padding-left: 10px;
+  /* padding-left: 10px; */
   /* background: $color_white; */
   position: relative;
   display: flex;
   align-items: center;
+
+  padding-left: 5px;
 }
 .columnWrapper {
   position: relative;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  // align-items: stretch;
   /* justify-content: space-between; */
 
   /* padding: 5px 10px; */
@@ -315,14 +260,16 @@ table .right {
 
 .rowWrapper {
   position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
+  display: grid;
+  flex-direction: row wrap;
+  // align-items: stretch;
 
   /* margin: 5px; */
 }
 .rowWrapper p {
   padding: 0 10px;
+  text-align: center;
+  align-self: center;
 }
 
 #myWork .title {
@@ -330,6 +277,38 @@ table .right {
   color: #fff;
   padding: 5px 20px;
 }
-#flexGrow {
-  flex-grow: 100;
+.flexGrow {
+  .flexGrow;
+}
+.flexGrow(@a: 1) {
+  flex-grow: @a;
+}
+.flexGrow2 {
+  .flexGrow(2);
+}
+.flexGrow5 {
+  .flexGrow(5);
+}
+
+@skewDeg: 10deg;
+.roundTag {
+  .myCard;
+  .center;
+  .textCenter;
+  .bgBlue;
+  .white;
+  // .my1px;
+  .m(@dot1);
+
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
+  transform: skew(-@skewDeg);
+  p {
+    transform: skew(@skewDeg);
+    text-align: left;
+    .p(0,0);
+    // text-align: center !importanceeeeeeeeeeeee
+  }
 }
