--- a/styles.less
+++ b/styles.less
@@ -12,7 +12,7 @@ h1,
 h2 {
   font-size: 150%;
   font-weight: 900;
-  padding-top: @dot5;
+  padding-top: @dot25;
 }
 
 h3 {
@@ -23,8 +23,13 @@ h3 {
 h4 {
   font-size: 100%;
   font-weight: 900;
-  padding-top: @dot2;
+  padding-top: @dot25;
 }
+
+.textAlignLeft {
+  text-align: left !important;
+}
+
 .profileText p {
   /* font-size: 120%; */
   font-weight: 500;
@@ -101,13 +106,10 @@ a {
 }
 
 .container .leftSide .block {
-  /* padding: 10%; */
   color: #bee9e8;
-  font-weight: 200;
   padding: 0 0 @dot1 0%;
-  // margin: 0 5%;
   text-align: center;
-  /* padding-bottom: 50px; */
+  padding: 0 @dot25;
 }
 
 .container .leftSide .block .ending {
@@ -127,16 +129,17 @@ a {
   align-items: center;
 }
 
-p,
-span,
 tr,
-th {
-  // &:extend(.p3_10);
-  .p(@dot25, 0);
+th,
+.leftSide {
+  .p(@dot1, @dot1);
   font-weight: 500;
 }
-p {
+p,
+span {
+  // padding: @dot25 0 0 0;
   text-align: justify;
+  font-weight: 500;
 }
 .leftSide .block table tr {
   /* padding: 0 20px 0 0; */
@@ -179,7 +182,7 @@ table .right {
 .aboutMe {
   text-align: justify;
   // padding-left: 5px;
-  .pl(@1)/* width: 70%; */;
+  .pl(@dot5)/* width: 70%; */;
 }
 .myCardWrapper {
   // &:extend(.p_dot25_dot5);
@@ -198,7 +201,7 @@ table .right {
   // justify-content: flex-start;
   // justify-content: center;
 
-  padding: @dot25 @dot25;
+  padding: @dot25 @dot1;
   // .p10px;
   // .py-2;
 }
@@ -260,22 +263,24 @@ table .right {
 
 .rowWrapper {
   position: relative;
-  display: grid;
+  display: flex;
   flex-direction: row wrap;
   // align-items: stretch;
 
   /* margin: 5px; */
+  // margin: 0;
+  // padding: 0;
 }
 .rowWrapper p {
-  padding: 0 10px;
-  text-align: center;
+  padding: 0 @dot25;
+  text-align: justify;
   align-self: center;
 }
 
 #myWork .title {
   /* flex-grow: 2; */
   color: #fff;
-  padding: 5px 20px;
+  padding: @dot25 @dot5;
 }
 .flexGrow {
   .flexGrow;
@@ -290,16 +295,35 @@ table .right {
   .flexGrow(5);
 }
 
+.techTask {
+  .p_dot25_dot5;
+  .columnWrapper;
+  .bgBlue3;
+  .flexGrow;
+  width: 50%;
+}
+.techTool {
+  .bgBlue4;
+  .p_dot25_dot5;
+  .flexGrow;
+  width: 20%;
+}
+.skill {
+  .techTool;
+  .bgBlue5;
+}
 @skewDeg: 10deg;
-.roundTag {
+.skewTag {
   .myCard;
   .center;
   .textCenter;
   .bgBlue;
   .white;
   // .my1px;
+  .p(@dot2, @dot25);
   .m(@dot1);
 
+  font-size: 80%;
   text-align: center;
   align-items: center;
   align-self: center;
@@ -312,3 +336,11 @@ table .right {
     // text-align: center !importanceeeeeeeeeeeee
   }
 }
+.skewTagGreen {
+  .skewTag;
+  .bgGreen;
+}
+
+// .verticalAlignBaseline {
+//   vertical-align: baseline;
+// }
