remove unneccessary `!important`

--- a/basics.less
+++ b/basics.less
@@ -17,83 +17,83 @@
 @green5: rgb(231, 255, 239);
 @greenLight: rgb(55, 255, 145);
 .green {
-  color: @green !important;
+  color: @green;
 }
 .green2 {
-  color: @green2 !important;
+  color: @green2;
 }
 .green3 {
-  color: @green3 !important;
+  color: @green3;
 }
 .green4 {
-  color: @green4 !important;
+  color: @green4;
 }
 .green5 {
-  color: @green5 !important;
+  color: @green5;
 }
 
 .greenLight {
-  color: @greenLight !important;
+  color: @greenLight;
 }
 
 .bgWhite {
-  background-color: #fff !important;
+  background-color: #fff;
 }
 
 .bgGreen {
-  background-color: @green !important;
+  background-color: @green;
 }
 .bgGreen2 {
-  background-color: @green2 !important;
+  background-color: @green2;
 }
 .bgGreen3 {
-  background-color: @green3 !important;
+  background-color: @green3;
 }
 
 .bgGreen4 {
-  background-color: @green4 !important;
+  background-color: @green4;
 }
 .bgGreen5 {
-  background-color: @green5 !important;
+  background-color: @green5;
 }
 
 .white {
-  color: #fff !important;
+  color: #fff;
 }
 
 .blueLight {
   color: rgba(0, 129, 167, 0.7);
 }
 .bgBlue {
-  background-color: #2579ad !important;
+  background-color: #2579ad;
 }
 .bgBlue2 {
-  background-color: rgb(72, 202, 228) !important;
+  background-color: rgb(72, 202, 228);
 }
 .bgBlue3 {
-  background-color: #99e6f5 !important;
+  background-color: #99e6f5;
 }
 .bgBlue4 {
-  background-color: #b0ebf7 !important;
+  background-color: #b0ebf7;
 }
 .bgBlue5 {
   background-color: #c7f4ff;
 }
 .blue {
   /* color: #2579ad !important; */
-  color: rgb(0, 119, 182) !important;
+  color: rgb(0, 119, 182);
 }
 .blue2 {
-  color: rgb(72, 202, 228) !important;
+  color: rgb(72, 202, 228);
 }
 .blue3 {
-  color: rgb(144, 224, 239) !important;
+  color: rgb(144, 224, 239);
 }
 .blue4 {
-  color: rgb(173, 232, 244) !important;
+  color: rgb(173, 232, 244);
 }
 .blue5 {
-  color: rgb(202, 240, 248) !important;
+  color: rgb(202, 240, 248);
 }
 
 .m(@var) {
