fix title color

--- a/styles.less
+++ b/styles.less
@@ -279,7 +279,7 @@ table .right {
 
 #myWork .title {
   /* flex-grow: 2; */
-  color: #fff;
+  // color: #fff;
   padding: @dot25 @dot5;
 }
 .flexGrow {
