add class verticalAlignBaseline

--- a/styles.less
+++ b/styles.less
@@ -341,6 +341,6 @@ table .right {
   .bgGreen;
 }
 
-// .verticalAlignBaseline {
-//   vertical-align: baseline;
-// }
+.verticalAlignBaseline {
+  vertical-align: baseline;
+}
