--- a/basics.less
+++ b/basics.less
@@ -102,6 +102,9 @@
 .m(@var1, @var2) {
   margin: @var1 @var2 !important;
 }
+.m_dot1 {
+  margin: @dot1;
+}
 .m_dot25_0_dot25_dot75 {
   margin: @dot25 0 @dot25 @dot75 !important;
 }
