update current work

--- a/styles.less
+++ b/styles.less
@@ -43,7 +43,7 @@ h4 {
 }
 
 body {
-  background-color: #eaf4f4;
+  // background-color: #eaf4f4;
   font-family: "Hepta Slab", cursive;
   font-size: 10px;
   display: flex;
@@ -179,7 +179,7 @@ table .right {
 }
 .container .rightSide .block .ending {
   // margin: 2% 50% 1% 0;
-  margin: @dot2 50% @dot1 0;
+  margin: @dot25 50% @1 0;
   border-bottom: @dot2 solid rgba(0, 129, 167, 0.2);
 }
 .aboutMe {
