--- a/basics.less
+++ b/basics.less
@@ -7,6 +7,7 @@
 @1dot5: 1.5rem;
 @1dot75: 1.75rem;
 @2: 2rem;
+@3: 3rem;
 @5: 5rem;
 @10: 10rem;
 
@@ -41,25 +42,26 @@
 }
 
 .bgGreen {
-  background-color: @green;
+  background-color: @green  !important;
 }
 .bgGreen2 {
-  background-color: @green2;
+  background-color: @green2  !important;
 }
 .bgGreen3 {
-  background-color: @green3;
+  background-color: @green3 !important;
 }
 
 .bgGreen4 {
-  background-color: @green4;
+  background-color: @green4 !important;
 }
 .bgGreen5 {
-  background-color: @green5;
+  background-color: @green5 !important;
 }
 
 .white {
-  color: #fff;
+  color: rgb(255, 255, 255) ;
 }
+
 
 .blueLight {
   color: rgba(0, 129, 167, 0.7);
@@ -68,32 +70,32 @@
   background-color: #2579ad;
 }
 .bgBlue2 {
-  background-color: rgb(72, 202, 228);
+  background-color: rgb(72, 202, 228) !important;
 }
 .bgBlue3 {
-  background-color: #99e6f5;
+  background-color: #99e6f5 !important;
 }
 .bgBlue4 {
-  background-color: #b0ebf7;
+  background-color: #b0ebf7 !important;
 }
 .bgBlue5 {
-  background-color: #c7f4ff;
+  background-color: #c7f4ff !important;
 }
 .blue {
   /* color: #2579ad !important; */
-  color: rgb(0, 119, 182);
+  color: rgb(0, 119, 182) !important;
 }
 .blue2 {
-  color: rgb(72, 202, 228);
+  color: rgb(72, 202, 228)!important;
 }
 .blue3 {
-  color: rgb(144, 224, 239);
+  color: rgb(144, 224, 239)!important;
 }
 .blue4 {
-  color: rgb(173, 232, 244);
+  color: rgb(173, 232, 244)!important;
 }
 .blue5 {
-  color: rgb(202, 240, 248);
+  color: rgb(202, 240, 248)!important;
 }
 
 .m(@var) {
