--- a/styles.less
+++ b/styles.less
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  line-height: 110%;
+  line-height: 150%;
   /* -webkit-box-sizing: border-box;
   box-sizing: border-box; */
 }
@@ -397,4 +397,12 @@ table .right {
 
 .verticalAlignBaseline {
   vertical-align: baseline;
+}
+
+.blockUnderline {
+  background-image: linear-gradient(120deg, #bee1e6 0%, #acecf7 100%);
+  background-repeat: no-repeat;
+  background-size: 100% .8em;
+  background-position: 0px 100%;
+
 }
