--- a/styles.less
+++ b/styles.less
@@ -163,7 +163,7 @@ a.small {
 
 
 .ending {
-  margin: @1 30%;
+  margin: @dot5 30%;
   border-bottom: @dot2 solid rgba(255, 255, 255, 0.2);
 }
 .rightSide .ending {
